--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^4.0.3
   equatable: ^2.0.3 
   flutter_bloc: ^8.0.0
+  flutter_modular: ^4.2.0
   flutter_spinkit: ^5.1.0
   get_it: ^7.2.0
   google_fonts: ^2.1.0
