--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,23 +36,27 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0
   dio: ^4.0.3
+  #New Moor
+  drift: ^1.0.1
   equatable: ^2.0.3 
   flutter_bloc: ^8.0.0
   flutter_modular: ^4.2.0
   flutter_spinkit: ^5.1.0
   get_it: ^7.2.0
   google_fonts: ^2.1.0
-  moor_flutter: ^4.0.0
-  path_provider: ^2.0.7
-  sqlite3_flutter_libs: ^0.5.1
+  # moor_flutter: ^4.0.0
+  path_provider: ^2.0.0
+  path: ^1.8.0
+  sqlite3_flutter_libs: ^0.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   bloc_test: ^9.0.0
-  build_runner: ^2.1.5
+  build_runner: ^2.1.4
+  drift_dev: ^1.0.2
   mockito: ^5.0.16  
-  moor_generator: ^4.6.0+1
+  # moor_generator: ^4.6.0+1
   test: ^1.16.8
   
 
