--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   # moor_flutter: ^4.0.0
   path_provider: ^2.0.0
   path: ^1.8.0
+  shimmer: ^2.0.0
   sqlite3_flutter_libs: ^0.5.0
 
 dev_dependencies:
